# open-dance-registration

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
common/: Cargo.toml  build.rs
common/src/: lib.rs  password.rs
migrations/: 20240102193405_init.sql
odr-admin/: Cargo.toml  Dioxus.toml
odr-admin/src/: components.rs  hooks.rs  main.rs  pages.rs
odr-admin/src/components/: breadcrumb.rs  form.rs  login_menu.rs  menu.rs  modal.rs  page.rs  table.rs  with_toasts.rs
odr-admin/src/components/menu/: event.rs  organization.rs  profile.rs  site.rs
odr-admin/src/hooks/: login.rs  toasts.rs
odr-admin/src/pages/: event.rs  events.rs  not_found.rs  organizations.rs  profile.rs  registration.rs  registration_schema.rs
odr-cmd/: Cargo.toml
odr-cmd/src/: main.rs
odr-core/: Cargo.toml
odr-core/src/: keys.rs  lib.rs  store.rs
odr-core/src/store/: event.rs  organization.rs  user.rs
odr-server/: Cargo.toml  Dioxus.toml  build.rs
odr-server/migrations/: 20240102193405_init.sql
odr-server/proto/: event.proto
odr-server/src/: api.rs  grpc.rs  hooks.rs  keys.rs  lib.rs  main.rs  server.rs  server_functions.rs  store.rs  user.rs  view.rs
odr-server/src/api/: authentication.rs  authorization.rs  common.rs  event.rs  login.rs  organization.rs  registration.rs  registration_schema.rs  user.rs
odr-server/src/hooks/: toasts.rs
odr-server/src/server_functions/: authentication.rs  event.rs  organization.rs  registration.rs  registration_schema.rs  user.rs
odr-server/src/store/: common.rs  event.rs  keys.rs  organization.rs  registration.rs  registration_schema.rs  user.rs
odr-server/src/view/: app.rs  components.rs  organization.rs  pages.rs
odr-server/src/view/components/: breadcrumb.rs  menu.rs  modal.rs  page.rs  table.rs  with_toasts.rs
odr-server/src/view/pages/: event.rs  landing.rs  login.rs  not_found.rs  organization.rs  organizations.rs  profile.rs  registration.rs  registration_schema.rs
proto/: authentication.proto  authorization.proto  event.proto  organization.proto  permission.proto  queries.proto  registration.proto  registration_schema.proto  user.proto
src/: api.rs  authentication.rs  keys.rs  lib.rs  main.rs  proto.rs  server.rs  server_functions.rs  store.rs  test_helpers.rs
src/api/: authentication.rs  authentication_middleware.rs  common.rs  event.rs  middleware.rs  organization.rs  permission.rs  registration.rs  registration_schema.rs  user.rs
src/api/middleware/: authentication.rs  selective.rs
src/hooks/: handle_error.rs  toasts.rs
src/server_functions/: authentication.rs  event.rs  organization.rs  permission.rs  registration.rs  registration_schema.rs  user.rs
src/store/: common.rs  event.rs  keys.rs  organization.rs  permission.rs  registration.rs  registration_schema.rs  user.rs
src/view/: app.rs  components.rs  pages.rs
src/view/components/: breadcrumb.rs  form.rs  page.rs  permissions.rs  with_toasts.rs
src/view/pages/: event.rs  event_settings.rs  landing.rs  login.rs  organization.rs  organization_settings.rs  profile.rs  registration_schema.rs  server_settings.rs
