[package]
name = "open-dance-registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
prost = "0.12.3"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-reflection = "0.10.2"
uuid = { version = "1.6.1", features = ["v7"] }

[build-dependencies]
tonic-build = "0.10.2"
