[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"]}
serde = { version = "1.0.195", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }

[features]
transport = ["tonic/transport", "tonic-build/transport"]
