[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13"
tonic = { version="0.12", default-features=false, features=["codegen", "prost"]}
serde = { version = "1.0.195", features = ["derive"] }
prost-types = "0.13"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[features]
transport = ["tonic/transport", "tonic-build/transport"]

[dev-dependencies]
test-case = "3.3.1"
