[package]
name = "odr-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
common = { path = "../common" }
tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"]}
tonic-web-wasm-client = "0.5.0"
dioxus-logger = "0.4.1"
log = "0.4.20"
dioxus-router = "0.4.3"
anyhow = "1.0.79"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
futures = "0.3.30"
uuid = { version = "1.7.0", features = ["v4", "js"] }
itertools = "0.12.1"
gloo-net = "0.5.0"
gloo-utils = "0.2.0"
wasm-bindgen = "=0.2.90"
serde_json = "1.0.114"
web-sys = "=0.3.67"
