[package]
name = "odr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.56"
bcrypt = "0.15.0"
chrono = "0.4.31"
rand = "0.8.5"
argon2 = "0.5.3"
ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "alloc"] }
jsonwebtoken = "9.2.0"
common = { path = "../common" }
uuid = { version = "1.6.1", features = ["v7"] }

[dev-dependencies]
log = "0.4.20"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
test-case = "3.3.1"
