[package]
name = "odr-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "odr-server"
path = "src/main.rs"

[lib]
name = "odr_server"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
log = "0.4.20"
prost = "0.12.3"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
test-case = "3.3.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-reflection = "0.10.2"
uuid = { version = "1.6.1", features = ["v7"] }
common = { path = "../common", features = ["transport"] }
tonic-web = "0.10.2"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
argon2 = "0.5.3"
serde = { version = "1.0.195", features = ["derive"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "alloc"] }
jsonwebtoken = "9.2.0"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
http = "0.2.11"
cookie = "0.18.0"
time = "0.3.34"
