[package]
name = "odr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Server/Client
serde = { version = "1.0.195", features = ["derive"] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
dioxus = { path = "../../dioxus/packages/dioxus", features = ["router", "fullstack", "logger"] }
prost = { version = "0.12.3" }
common = { path = "../common" }
log = "0.4.20"
serde_bytes = "0.11.15"

# Server
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"], optional = true }
thiserror = { version = "1.0.56", optional = true }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"], optional = true }
tonic = { version = "0.10.2", optional = true }
tonic-reflection = { version = "0.10.2", optional = true }
tonic-web = { version = "0.10.2", optional = true }
chrono = { version = "0.4.31", features = ["serde"], optional = true }
argon2 = { version = "0.5.3", optional = true }
ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "alloc"], optional = true }
jsonwebtoken = { version = "9.2.0", optional = true }
http = { version = "0.2.11", optional = true }
cookie = { version = "0.18.0", optional = true }
time = { version = "0.3.34", optional = true }
prost-types = { version = "0.12.3", optional = true }
axum = { version = "0.7.9", optional = true }
dioxus-liveview = { path = "../../dioxus/packages/liveview", optional = true }
dioxus-cli-config = { path = "../../dioxus/packages/cli-config", optional = true }
odr-core = { path = "../odr-core", optional = true }
futures = { version = "0.3.31", optional = true }

# Client
wasm-bindgen = { version = "=0.2.97", optional = true }
web-sys = { version = "=0.3.74", optional = true }

[features]
web = ["dioxus/web", "dep:wasm-bindgen", "dep:web-sys"]
server = ["dioxus/server", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:tonic", "dep:tonic-reflection", "dep:tonic-web", "dep:chrono", "dep:argon2", "dep:ed25519-dalek", "dep:jsonwebtoken", "dep:http", "dep:cookie", "dep:prost-types", "dep:time", "dep:axum", "dep:dioxus-liveview", "dep:dioxus-cli-config", "dep:odr-core", "dep:futures", "common/transport"]
